[package]
name = "super-blank-project"
version = "0.2.0"


[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"


[dependencies]
rp2040-hal = "0.9.1"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.1"
critical-section = "1.1.2"


[[bin]]
name = "blinky"
path = "blinky.rs"
